GNOME Bugzilla – Bug 650777
Full name to username conversion may contain invalid characters
Last modified: 2011-05-23 13:24:58 UTC
Adding a new user with points in the name like "Justin A. Test" suggests "justina.test" as username. Creating that account you get this error message: running '/usr/sbin/useradd' failed: /usr/sbin/useradd returned an error (3): useradd: invalid user name 'justina.test'
Hmm, I just successfully created hansa.wurst here. But I agree the period looks a bit unfortunate in this case. We probably do want to allow people to create usernames with the common firstname.lastname pattern, though.
Periods are stripped out when generating proposals now.