Users: strip out periods when generating proposals

Some systems seem to disallow them in usernames, but more
importantly, the proposals look just wrong for abbreviated
middle initials with a period.

https://bugzilla.gnome.org/show_bug.cgi?id=650777